[project]
name = "quizzical"
version = "0.2.1"
description = "A trivia quiz game for the terminal"
license = { text = "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"}
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "textual>=0.86.3",
    "httpx>=0.27.2",
    "xdg-base-dirs>=6.0.2",
    "textual-countdown>=0.1.1",
    "humanize>=4.11.0",
]
readme = "README.md"
requires-python = ">= 3.12"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Internet",
    "Topic :: Terminals",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/davep/quizzical"
Repository = "https://github.com/davep/quizzical"
Documentation = "https://github.com/davep/quizzical/blob/main/README.md"
Source = "https://github.com/davep/quizzical"
Issues = "https://github.com/davep/quizzical/issues"
Discussions = "https://github.com/davep/quizzical/discussions"

[project.scripts]
quizzical = "quizzical.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=4.0.1",
    "mypy>=1.13.0",
    "textual-dev>=1.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/quizzical"]
