[metadata]
name = quizzical
description = Coming soon
version = attr: quizzical.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davep/quizzical
author = Dave Pearson
author_email = davep@davep.org
maintainer = Dave Pearson
maintainer_email = davep@davep.org
license = License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
license_files = LICENCE
keywords = terminal
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Environment :: Console
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet
    Topic :: Terminals
    Typing :: Typed
# project_urls =
#    Documentation = https://github.com/davep/quizzical/blob/main/README.md
#    Source = https://github.com/davep/quizzical
#    Issues = https://github.com/davep/quizzical/issues
#    Discussions = https://github.com/davep/quizzical/discussions

[options]
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.8,<3.12
install_requires =
    textual>=0.47.1
    humanize>=4.8.0
    httpx

[options.entry_points]
console_scripts =
    quizzical = quizzical.__main__:run

### setup.cfg ends here
